# azure-agentic-ai-masterclass

./: .env.example  .gitattributes  .gitignore  COMPARISON.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/core/: agent_loop.py  logging.py
app/routers/: health.py  hello.py
app/schemas/: agent.py
docs/: Course-Enterprise-UseCases.md
infra/: README.md
labs/week01_foundations/: README.md
labs/week02_foundry/: README.md
labs/week03_04_agent_framework/: README.md
labs/week05_tools_mcp/: README.md
labs/week06_07_multi_agent/: README.md
labs/week08_rag_grounding/: README.md
labs/week09_hosting_scale/: README.md
labs/week10_observability_eval/: README.md
labs/week11_security_compliance/: README.md
labs/week12_capstone/: README.md
slides/: azure-agentic-ai-masterclass.pptx
tests/: test_hello.py
