[project]
name = "azure-agentic-ai-masterclass"
version = "0.1.0"
description = "FastAPI starter for the Agentic AI on Azure 12-week enterprise master class"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
